Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33256

CMakeTools get reevaluated every time a Kit's name is changed

XMLWordPrintable

    • a0bc7c7ea (master)

      Steps to reproduce:

      • Start Qt Creator
      • Open Settings => Kits
      • Go to any Kit, start editing its name
      • Set a breakpoint in Process::runBlocking
      • Edit the kit name

      Expected:

      • Process::runBlocking is not called

      Actual

      • Process::runBlocking is called

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cadam Cristian Adam
            madwinter Marcus Tillmanns
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes