CMakePM: Minimize CMakeTool introspection

The CMake list tools would be recreated:

* on every Kits settings page opening
* on every CMake tool setting page opening
* on a Kit's name change, on every letter typed

This resulted in running all detected CMake tools to query for the
capabilities.

With this changeset, this is now only done once at startup.

Fixes: QTCREATORBUG-33256
Change-Id: I72bf8dd432cac9196f49ff8b933bbf7fcd7b791b
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>